# 3dprint

./: .env  .gitignore  .gitmodules  README.md
dan/: pyproject.toml  requirements.txt
dan/lib/: convolution_surface.py  glfw.py  golf.py  helper.py  naca.py  plan.py  polytri.py  premade.py  pyconvsurf.py
dan/project/acorn_cup_planter/: top.py
dan/project/airfoil/: airfoil.py  airfoil.py.scad
dan/project/alg_tests/: voronoi.py  voronoi.py.scad
dan/project/atomliteenv2/: main.py
dan/project/ballsculpture/: ballsculpture.py  ballsculpture.py.scad
dan/project/break_cgal/: vine_break.py  vine_break.py.scad  vine_test.py
dan/project/building/: building1.py  building1.py.scad
dan/project/cameramount/: anglemount.py  anglemount.py.scad  anglemount.stl  screwmount.py
dan/project/chain/: chain1.py  chain2.py  chain3.py
dan/project/chainmail/: chainmail1.py
dan/project/circle_tray/: circle_tray.py
dan/project/cityscape/: cityscape1.py
dan/project/cnc_surface/: surface.py
dan/project/connectors/: verticaldowel.py
dan/project/conscendohatch/: hatch.py  hatch.py.scad
dan/project/convsurftest/: convsurftest.py
dan/project/curve_wall_planter/: rough_shape.py
dan/project/cylchain/: cyl_chain.py
dan/project/deckbox/: deckbox.py  deckbox2.py
dan/project/drawer/: bottom.py  bottom_mid.py  top.py
dan/project/fifteendegreebracket/: bracket.py
dan/project/flat_bed/: bed.py
dan/project/fountain/: fountain.py  fountain.py.scad  tubetest1.stl
dan/project/golf/: test.py  test.scad  test2.min.py  test2.py  test2.scad
dan/project/miter_cart/: cart.py  (+2 more)
(+507 files in other folders)
